new: raw image returning
